--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
 	"name": "use-eventer",
 	"description": "A custom React hook for adding event listeners to one or multiple elements with flexible options.",
 	"version": "1.1.0",
-	"keywords": ["react", "hook", "event", "listener", "custom"],
+	"keywords": [
+		"react",
+		"hook",
+		"event",
+		"listener",
+		"custom"
+	],
 	"files": [
 		"dist",
+		"package.json",
 		"README.md"
 	],
 	"engines": {
